# debbuild

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/debbuild/: __init__.py  __main__.py
src/debbuild/tests/: test_debbuild.py
