[metadata]
name = debbuild
description = Command line utility to build Deb package without Debian
long_description = file: README.md
long_description_content_type = text/markdown
url=https://gitlab.com/ikus-soft/debbuild
author=IKUS Software inc.
author_email=support@ikus-soft.com
maintainer=Patrik Dufresne
maintainer_email=patrik@ikus-soft.com
license = MIT License
license_files =
    LICENSE
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Desktop Environment
install_requires =
    Jinja2>=2.10,<4
    unix_ar
[options]
packages = 
    debbuild
package_dir =
    =src
include_package_data = True
setup_requires = 
    setuptools_scm>=5.0.1
python_requires = >=3.6, <4

[options.entry_points]
console_scripts =
    debbuild = debbuild:main